<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >
    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="-80dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Running Man Image -->

    <ImageView
        android:id="@+id/running_man"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/running_man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <!-- Prostokąt z cieniem -->
        <FrameLayout
            android:layout_width="321dp"
            android:layout_height="436dp"
            android:layout_gravity="center"
            android:background="@drawable/white_box_with_shadow"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Nagłówek -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/robotomono_bold"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#456DB0"
                    android:textSize="28sp" />

                <!-- Pole użytkownika -->
                <EditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:fontFamily="@font/robotomono_regular"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:importantForAutofill="no"
                    />

                <!-- Pole hasła -->
                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:fontFamily="@font/robotomono_regular"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="16sp" />

                <!-- Przełącznik Zapamiętaj Mnie -->
                <Switch
                    android:id="@+id/switchRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/robotomono_regular"
                    android:text="@string/remember_me"
                    android:textColor="#456DB0"
                    android:textSize="15sp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <!-- Przycisk Logowania -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="171dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_gradient_button"
                    android:fontFamily="@font/robotomono_bold"
                    android:text="@string/login"
                    style="@style/GradientButtonStyle"
                    app:backgroundTint="@null"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <!-- Przycisk Rejestracji -->
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="171dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_gradient_button"
                    android:fontFamily="@font/robotomono_bold"
                    android:text="@string/don_t_have_an_account_register"
                    style="@style/GradientButtonStyle"
                    app:backgroundTint="@null"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </FrameLayout>

        <!-- Przycisk Zmiany Języka -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_globe" />

            <TextView
                android:id="@+id/btnChangeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomono_bold"
                android:text="@string/change_language"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
